# webuntis-fetcher

./: .gitignore  Earthfile  README.md  config-template.ini  main.py  messages.py  pyproject.toml  requirements.txt  statistics.py
.github/: dependabot.yml
.github/workflows/: build.yaml  mirror.yaml
.woodpecker/: build+release.yaml
src/webuntis_fetcher/: __init__.py  __main__.py  messages.py  starter.py  statistics.py  timetable.py
util/: increase-version.py
