[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "webuntis-fetcher"
version = "1"
authors = [
    { name = "Mathis Dirksen-Thedens", email = "mail@zephyrsoft.org" },
]
description = "get school timetable data and messages from WebUntis"
keywords = [
    "webuntis",
    "untis",
    "school",
    "timetable",
    "message",
    "lesson",
    "period",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Education",
]
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "openpyxl==3.1.5",
]

[project.urls]
Homepage = "https://github.com/mathisdt/webuntis-fetcher"
Issues = "https://github.com/mathisdt/webuntis-fetcher/issues"

[project.scripts]
webuntis-fetcher = "webuntis_fetcher.starter:run"
